force-app/main/default/objects/Account/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <label>Firm</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View Ledger AB</fullName>
                <label>VIEW Ledger AB</label>
            </value>
            <value>
                <fullName>View Ledger AS</fullName>
                <label>VIEW Ledger AS</label>
            </value>
            <value>
                <fullName>View Maritime AS</fullName>
                <label>VIEW Maritime AS</label>
            </value>
            <value>
                <fullName>View Tax AS</fullName>
                <label>VIEW Tax AS</label>
            </value>
            <value>
                <fullName>VIEW Construct AS</fullName>
            </value>
            <value>
                <fullName>VIEW Procurator AS</fullName>
            </value>
            <value>
                <fullName>View Ledger Sandefjord AS</fullName>
                <isActive>false</isActive>
                <label>VIEW Ledger Sandefjord AS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>