force-app/main/default/objects/Account/fields/Group_parent_org__c.field-meta.xml
<CustomField>
    <fullName>Group_parent_org__c</fullName>
    <description>Bisnode</description>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Group parent org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>