force-app/main/default/objects/Account/fields/Handles_cash_over_50k__c.field-meta.xml
<CustomField>
    <fullName>Handles_cash_over_50k__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Does the customer handle a lot of cash? “A lot of cash” must be seen in context of total turnover. 50.000 NOK/SEK or above per year is to be understood as a lot of cash at all times, regardless of total turnover.</inlineHelpText>
    <label>Handles cash over 50k per year?</label>
    <type>Checkbox</type>
</CustomField>