force-app/main/default/objects/Account/fields/Historical_contract_date__c.field-meta.xml
<CustomField>
    <fullName>Historical_contract_date__c</fullName>
    <description>First contract date</description>
    <label>Historical contract date</label>
    <type>Date</type>
</CustomField>