force-app/main/default/objects/Account/fields/ID_check_person_executed_date__c.field-meta.xml
<CustomField>
    <fullName>ID_check_person_executed_date__c</fullName>
    <inlineHelpText>The current date is automatically set when the value in the &quot;Performed ID Control Person&quot; field is set.</inlineHelpText>
    <label>ID check person executed date</label>
    <type>Date</type>
</CustomField>