force-app/main/default/objects/Account/fields/ID_control_executed__c.field-meta.xml
<CustomField>
    <fullName>ID_control_executed__c</fullName>
    <inlineHelpText>ID verification is performed by obtaining a copy of credentials, electronic signature or by confirming that you know him / her. See section § 8 of the Money Laundering Act on the information to be registered. Note that the public sector is exempt.</inlineHelpText>
    <label>ID-control done &amp; certain of identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not applicable - Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>