force-app/main/default/objects/Account/fields/Industry_code__c.field-meta.xml
<CustomField>
    <fullName>Industry_code__c</fullName>
    <description>Bisnode</description>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Industry code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>