force-app/main/default/objects/Account/fields/Industry_description__c.field-meta.xml
<CustomField>
    <fullName>Industry_description__c</fullName>
    <description>Bisnode</description>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Industry description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>