force-app/main/default/objects/Account/fields/Inspection_on_money_laundering_completed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_on_money_laundering_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection on money laundering completed</label>
    <type>Checkbox</type>
</CustomField>