force-app/main/default/objects/Account/fields/Inv_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Inv_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>