force-app/main/default/objects/Account/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <inlineHelpText>Fakturaforsendelse</inlineHelpText>
    <label>Invoice Delivery Method</label>
    <length>128</length>
    <type>Text</type>
</CustomField>