force-app/main/default/objects/Account/fields/Invoice_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_2__c</fullName>
    <label>Invoice Email 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>