force-app/main/default/objects/Account/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <label>Invoice Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>