force-app/main/default/objects/Account/fields/Invoice_Responsible_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Responsible_Email__c</fullName>
    <description>Integration field</description>
    <label>Invoice Responsible Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>