force-app/main/default/objects/Account/fields/Is_auto_generated_email_address_active__c.field-meta.xml
<CustomField>
    <fullName>Is_auto_generated_email_address_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is auto-generated email address active?</label>
    <type>Checkbox</type>
</CustomField>