force-app/main/default/objects/Account/fields/IsCustomerCreatedXledger__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerCreatedXledger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration Xledger</description>
    <label>IsCustomerCreatedXledger</label>
    <type>Checkbox</type>
</CustomField>