force-app/main/default/objects/Account/fields/IsLWCActive__c.field-meta.xml
<CustomField>
    <fullName>IsLWCActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLWCActive</label>
    <type>Checkbox</type>
</CustomField>