force-app/main/default/objects/Account/fields/IsProjectCreatedXledger__c.field-meta.xml
<CustomField>
    <fullName>IsProjectCreatedXledger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration Xledger</description>
    <label>IsProjectCreatedXledger</label>
    <type>Checkbox</type>
</CustomField>