force-app/main/default/objects/Account/fields/Last_performed_customer_control__c.field-meta.xml
<CustomField>
    <fullName>Last_performed_customer_control__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Enter the date when VIEW performed the last customer check or made changes to Customer Control &amp; Money Laundery Risk.</inlineHelpText>
    <label>Last performed customer control</label>
    <type>Date</type>
</CustomField>