force-app/main/default/objects/Account/fields/Last_performed_ID_control_company__c.field-meta.xml
<CustomField>
    <fullName>Last_performed_ID_control_company__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Enter the date when the customer signed the first customer control. In the case of new owners or beneficial owners, a new ID check must be performed, and the date updated.</inlineHelpText>
    <label>Performed ID control company</label>
    <type>Date</type>
</CustomField>