force-app/main/default/objects/Account/fields/Last_Performed_ID_Control_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Performed_ID_Control_DateTime__c</fullName>
    <label>Last Performed ID Control Date/Time</label>
    <type>DateTime</type>
</CustomField>