force-app/main/default/objects/Account/fields/Last_year_turnover__c.field-meta.xml
<CustomField>
    <fullName>Last_year_turnover__c</fullName>
    <description>Bisnode</description>
    <label>Last year turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>