force-app/main/default/objects/Account/fields/Late_payment__c.field-meta.xml
<CustomField>
    <fullName>Late_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late payment</label>
    <type>Checkbox</type>
</CustomField>