force-app/main/default/objects/Account/fields/MailNickName__c.field-meta.xml
<CustomField>
    <fullName>MailNickName__c</fullName>
    <label>MailNickName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>