force-app/main/default/objects/Account/fields/Name_Subject_Flow__c.field-meta.xml
<CustomField>
    <fullName>Name_Subject_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>Name/Subject (Flow)</label>
    <type>TextArea</type>
</CustomField>