force-app/main/default/objects/Account/fields/Note_ID_control_person__c.field-meta.xml
<CustomField>
    <fullName>Note_ID_control_person__c</fullName>
    <description>KYC</description>
    <inlineHelpText>If not signed with Bank Id, comment on who from VIEW has met the customer in person. If there are reasons to doubt the ID check or the check has been performed by a third party, it must be commented on here.</inlineHelpText>
    <label>Note ID control person</label>
    <type>TextArea</type>
</CustomField>