force-app/main/default/objects/Account/fields/Note_risk_category__c.field-meta.xml
<CustomField>
    <fullName>Note_risk_category__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Risk category must be justified on the basis of an overall assessment of the points above. If none of the boxes are ticked, you can basically define the customer as normal risk by arguing that there are no circumstances that indicate high risk. The justification must be customer-specific.</inlineHelpText>
    <label>Note risk category</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>