force-app/main/default/objects/Account/fields/Notice_ID_control_company__c.field-meta.xml
<CustomField>
    <fullName>Notice_ID_control_company__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Enter information about customer control is performed in Kjenndinkunde, with web form or manual self-declaration form etc.</inlineHelpText>
    <label>Notice - ID control company</label>
    <type>TextArea</type>
</CustomField>