force-app/main/default/objects/Account/fields/Notice_real_licensees__c.field-meta.xml
<CustomField>
    <fullName>Notice_real_licensees__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Fill in the country in which the real licensees are reside.</inlineHelpText>
    <label>Notice beneficial owners</label>
    <type>TextArea</type>
</CustomField>