force-app/main/default/objects/Account/fields/Org_Number__c.field-meta.xml
<CustomField>
    <fullName>Org_Number__c</fullName>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Org. Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>