force-app/main/default/objects/Account/fields/Other_Systems__c.field-meta.xml
<CustomField>
    <fullName>Other_Systems__c</fullName>
    <inlineHelpText>Other systems delivered by VIEW.</inlineHelpText>
    <label>Other Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aditro_HR_and_Payroll</fullName>
                <label>Aditro HR and Payroll</label>
            </value>
            <value>
                <fullName>VIEW Connect</fullName>
            </value>
            <value>
                <fullName>VIEW Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>