force-app/main/default/objects/Account/fields/Outsourcing_Sub_processor__c.field-meta.xml
<CustomField>
    <fullName>Outsourcing_Sub_processor__c</fullName>
    <label>Outsourcing Sub-processor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>