force-app/main/default/objects/Account/fields/Owner_and_control_structure__c.field-meta.xml
<CustomField>
    <fullName>Owner_and_control_structure__c</fullName>
    <description>KYC</description>
    <inlineHelpText>During the customer control, it must be revealed who the real licensees are. Check that the owner and company structure are uploaded in VIEWforce, enter a description of the number of owners. Also check if the company has abnormal or complicated use of real rights holders.</inlineHelpText>
    <label>Owner and control structure</label>
    <type>TextArea</type>
</CustomField>