force-app/main/default/objects/Account/fields/Payment_to_high_risk_conflict_countries__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_high_risk_conflict_countries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Has the customer made any payments to conflict areas/high-risk countries? For updated information/definition regarding conflict areas/high-risk countries, see “Hvitvaskingsrutinen” 5.1.8..</inlineHelpText>
    <label>Payment to high risk/conflict countries?</label>
    <type>Checkbox</type>
</CustomField>