force-app/main/default/objects/Account/fields/Payroll_Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Channel_URL__c</fullName>
    <label>Payroll Channel URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>