force-app/main/default/objects/Account/fields/Payroll_License_Owner__c.field-meta.xml
<CustomField>
    <fullName>Payroll_License_Owner__c</fullName>
    <label>Payroll License Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payroll_License_Owners</valueSetName>
    </valueSet>
</CustomField>