force-app/main/default/objects/Account/fields/Payroll_system__c.field-meta.xml
<CustomField>
    <fullName>Payroll_system__c</fullName>
    <label>Payroll system</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aditro</fullName>
                <isActive>false</isActive>
                <label>Aditro</label>
            </value>
            <value>
                <fullName>Fortnox</fullName>
            </value>
            <value>
                <fullName>Hogia</fullName>
            </value>
            <value>
                <fullName>Integrated in ERP system</fullName>
            </value>
            <value>
                <fullName>SD Worx</fullName>
            </value>
            <value>
                <fullName>Tripletex</fullName>
            </value>
            <value>
                <fullName>Xledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>