force-app/main/default/objects/Account/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <description>KYC</description>
    <inlineHelpText>A person who falls under the PEP (Political Exposed person) definition will forever remain a PEP (this includes close family members and well-known employees). PEP shall be subject to reinforced customer measures at least one year after PEP terminates the position or position that made the person PEP. Further investigations may reveal that this is not an active PEP. This means that there is no longer a basis for treating the person as PEP and it is filled in with NO on PEP status.</inlineHelpText>
    <label>PEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes_Active_PEP</fullName>
                <label>Yes (Active PEP)</label>
            </value>
            <value>
                <fullName>Yes_None_Active_PEP</fullName>
                <label>Yes (None Active PEP)</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>