force-app/main/default/objects/Account/fields/Personal_data_is_deleted__c.field-meta.xml
<CustomField>
    <fullName>Personal_data_is_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal data is deleted</label>
    <type>Checkbox</type>
</CustomField>