force-app/main/default/objects/Account/fields/Price_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreement__c</fullName>
    <inlineHelpText>Avtaletype</inlineHelpText>
    <label>Price Agreement</label>
    <length>128</length>
    <type>Text</type>
</CustomField>