force-app/main/default/objects/Account/fields/Priority_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>Priority_Case_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>Priority (Case Flow)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>