force-app/main/default/objects/Account/fields/Project_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Close_Date__c</fullName>
    <formula>/*CASE(MONTH(Termination_end_date__c),
1, DATE(YEAR(Termination_end_date__c), 2,1),
2, DATE(YEAR(Termination_end_date__c), 3,1),
3, DATE(YEAR(Termination_end_date__c), 4,1),
4, DATE(YEAR(Termination_end_date__c), 5,1),
5, DATE(YEAR(Termination_end_date__c), 6,1),
6, DATE(YEAR(Termination_end_date__c), 7,1),
7, DATE(YEAR(Termination_end_date__c), 8,1),
8, DATE(YEAR(Termination_end_date__c), 9,1),
9, DATE(YEAR(Termination_end_date__c), 10,1),
10, DATE(YEAR(Termination_end_date__c), 11,1),
11, DATE(YEAR(Termination_end_date__c), 12,1),
12, DATE(YEAR(Termination_end_date__c)+1, 1,1),
null)*/


Termination_end_date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Close Date</label>
    <type>Date</type>
</CustomField>