force-app/main/default/objects/Account/fields/Project_Number_Operational__c.field-meta.xml
<CustomField>
    <fullName>Project_Number_Operational__c</fullName>
    <description>Updated by Project Flow</description>
    <label>Project Number - Operational</label>
    <length>15</length>
    <type>Text</type>
</CustomField>