force-app/main/default/objects/Account/fields/Queue_Case_Flow__c.field-meta.xml
<CustomField>
    <fullName>Queue_Case_Flow__c</fullName>
    <description>Not in use, to be deleted.</description>
    <label>Queue (Case Flow)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Maritim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>