force-app/main/default/objects/Account/fields/Reason_For_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Deactivation__c</fullName>
    <label>Reason For Deactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankrupt</fullName>
            </value>
            <value>
                <fullName>Terminated By Customer</fullName>
            </value>
            <value>
                <fullName>Terminated By View</fullName>
            </value>
            <value>
                <fullName>Late Payment</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>