force-app/main/default/objects/Account/fields/Reason_for_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Red_Flag__c</fullName>
    <label>Reason for Red Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Possible discontinuing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>