force-app/main/default/objects/Account/fields/Reason_for_termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_termination__c</fullName>
    <label>Reason for termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_termination</valueSetName>
    </valueSet>
</CustomField>