force-app/main/default/objects/Account/fields/Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if any issues that could result in termination.</inlineHelpText>
    <label>Red Flag</label>
    <type>Checkbox</type>
</CustomField>