force-app/main/default/objects/Account/fields/Red_Flag_Revenue_LTM__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Revenue_LTM__c</fullName>
    <inlineHelpText>Last twelve months</inlineHelpText>
    <label>Red Flag Revenue (LTM)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>