force-app/main/default/objects/Account/fields/Registration_date__c.field-meta.xml
<CustomField>
    <fullName>Registration_date__c</fullName>
    <description>Official registration date Bisnode</description>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Registration date</label>
    <type>Date</type>
</CustomField>