force-app/main/default/objects/Account/fields/Related_to_criminal_or_terrorist_org__c.field-meta.xml
<CustomField>
    <fullName>Related_to_criminal_or_terrorist_org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KYC</description>
    <inlineHelpText>Is the customer noted on any sanction lists relating to criminal and/or terrorist organizations? Screening against sanctions lists is conducted through “Kjenn Din Kunde”.</inlineHelpText>
    <label>Related to criminal or terrorist org.?</label>
    <type>Checkbox</type>
</CustomField>