force-app/main/default/objects/Account/fields/Remittance__c.field-meta.xml
<CustomField>
    <fullName>Remittance__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Has VIEW remittance responsibility for the customer, in full or in part. fill in with Yes or No</inlineHelpText>
    <label>Remittance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>