force-app/main/default/objects/Account/fields/Revenue_last_12_month__c.field-meta.xml
<CustomField>
    <fullName>Revenue_last_12_month__c</fullName>
    <label>Revenue last 12 month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>