force-app/main/default/objects/Account/fields/RunAccountDeactivatedProcess__c.field-meta.xml
<CustomField>
    <fullName>RunAccountDeactivatedProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to trigger next step in account process when evaluating next criteria.</description>
    <label>Run Account Deactivated Process</label>
    <type>Checkbox</type>
</CustomField>