force-app/main/default/objects/Account/fields/Share_capital__c.field-meta.xml
<CustomField>
    <fullName>Share_capital__c</fullName>
    <inlineHelpText>Updated by Bisnode</inlineHelpText>
    <label>Share capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>