force-app/main/default/objects/Account/fields/SharepoinLink__c.field-meta.xml
<CustomField>
    <fullName>SharepoinLink__c</fullName>
    <label>Sharepoint Link</label>
    <type>Url</type>
</CustomField>