force-app/main/default/objects/Account/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <label>SiteURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>