force-app/main/default/objects/Account/fields/Smartscore__c.field-meta.xml
<CustomField>
    <fullName>Smartscore__c</fullName>
    <label>Smartscore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GODK</fullName>
            </value>
            <value>
                <fullName>KONT</fullName>
            </value>
            <value>
                <fullName>AVSL</fullName>
            </value>
            <value>
                <fullName>INSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>