force-app/main/default/objects/Account/fields/SPGroupID__c.field-meta.xml
<CustomField>
    <fullName>SPGroupID__c</fullName>
    <label>SPGroupID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>