force-app/main/default/objects/Account/fields/Support_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Support_Agreement__c</fullName>
    <label>Support Agreement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>