force-app/main/default/objects/Account/fields/Task_Reports__c.field-meta.xml
<CustomField>
    <fullName>Task_Reports__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp; &quot;lightning/r/Report/00O1t00000991V4EAI/view?fv1=&quot; &amp; 
SUBSTITUTE(Name, &quot;&amp;&quot;, &quot;%26&quot;),&quot;Action Plan - Open task&quot;,&quot;_blank&quot;)
+
BR()
+
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp; &quot;lightning/r/Report/00O6N000001FbK2UAK/view?fv1=&quot; &amp; 
SUBSTITUTE(Name, &quot;&amp;&quot;, &quot;%26&quot;),&quot;Action Plan - Closed task&quot;,&quot;_blank&quot;)
+
BR()
+
HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp; &quot;lightning/r/Report/00O6N000001FbJxUAK/view?fv0=&quot; &amp; 
SUBSTITUTE(Name, &quot;&amp;&quot;, &quot;%26&quot;),&quot;Logged time pr customer&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Reports</label>
    <type>Text</type>
</CustomField>