force-app/main/default/objects/Account/fields/Termination_Comment__c.field-meta.xml
<CustomField>
    <fullName>Termination_Comment__c</fullName>
    <label>Termination Comment</label>
    <type>TextArea</type>
</CustomField>