force-app/main/default/objects/Account/fields/Termination_date__c.field-meta.xml
<CustomField>
    <fullName>Termination_date__c</fullName>
    <label>Termination date</label>
    <type>Date</type>
</CustomField>