force-app/main/default/objects/Account/fields/Termination_end_date__c.field-meta.xml
<CustomField>
    <fullName>Termination_end_date__c</fullName>
    <label>Termination end date</label>
    <type>Date</type>
</CustomField>