force-app/main/default/objects/Account/fields/The_customer_s_internal_routines__c.field-meta.xml
<CustomField>
    <fullName>The_customer_s_internal_routines__c</fullName>
    <description>KYC</description>
    <inlineHelpText>Do your assessment on the customers internal routine, regarding vouchers, payroll documents, employee agreements, contracts and other information and documentation we handle and need to do our assignment.</inlineHelpText>
    <label>The customer&apos;s internal routines?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>