force-app/main/default/objects/Account/fields/Ultimate_beneficial_owners_huvudman__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_beneficial_owners_huvudman__c</fullName>
    <inlineHelpText>Fill in information about real licensees from Kjenndinkunde. For Sweden, it is Huvudman who must be accounted for.</inlineHelpText>
    <label>Ultimate beneficial owners/huvudman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>